--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Women Safety</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="gender">
+        <item>Female</item>
+        <item>Male</item>
+        <item>Others</item>
+        <item>Prefer not to say</item>
+    </string-array>
 </resources>
